force-app/logging/objects/CoreLibs_Log__c/CoreLibs_Log__c.object-meta.xml
<CustomObject>
    <description>Persisted log record for capturing metrics, errors, and other logging information in Salesforce.</description>
    <label>Log</label>
    <nameField>
        <displayFormat>LOG-{0}</displayFormat>
        <label>Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>