force-app/logging/objects/CoreLibs_Log__c/fields/Label__c.field-meta.xml
<CustomField>
    <fullName>Label__c</fullName>
    <description>The label for the log.</description>
    <inlineHelpText>The label for the log.</inlineHelpText>
    <label>Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>