force-app/logging/objects/CoreLibs_Log__c/fields/LogCreationTimestamp__c.field-meta.xml
<CustomField>
    <fullName>LogCreationTimestamp__c</fullName>
    <description>Timestamp used for knowing when logs were generated. Necessary because createddate may not be accurate pending latency.</description>
    <inlineHelpText>Timestamp used for knowing when logs were generated. Necessary because createddate may not be accurate pending latency.</inlineHelpText>
    <label>Log Creation Timestamp</label>
    <type>DateTime</type>
</CustomField>