force-app/logging/objects/CoreLibs_Log__c/fields/RunningUser__c.field-meta.xml
<CustomField>
    <fullName>RunningUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The user executing the transaction in which the log was generated.</description>
    <inlineHelpText>The user executing the transaction in which the log was generated.</inlineHelpText>
    <label>Running User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Logs</relationshipName>
    <type>Lookup</type>
</CustomField>