force-app/logging/objects/CoreLibs_Log__c/fields/RunningUserName__c.field-meta.xml
<CustomField>
    <fullName>RunningUserName__c</fullName>
    <description>Name for the running user. Added for convenience.</description>
    <formula>RunningUser__r.FirstName + &apos; &apos; + RunningUser__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Name for the running user. Added for convenience.</inlineHelpText>
    <label>Running User Name</label>
    <type>Text</type>
</CustomField>