force-app/logging/objects/CoreLibs_Log__c/fields/TransactionType__c.field-meta.xml
<CustomField>
    <fullName>TransactionType__c</fullName>
    <description>The type of transaction the log was captured in.</description>
    <inlineHelpText>The type of transaction the log was captured in.</inlineHelpText>
    <label>Transaction Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>