force-app/logging/objects/CoreLibs_Log__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>The type of log e.g. ERROR, WARN, INFO.</description>
    <inlineHelpText>The type of log e.g. ERROR, WARN, INFO.</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>INFO</fullName>
            </value>
            <value>
                <fullName>WARN</fullName>
            </value>
            <value>
                <fullName>ERROR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>